--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             <li>Cheesecake</li>
         </ul>
         <div class="cake-images">
-            <img src="/images/chocolate-cake.png" alt="Chocolate Cake">
-            <img src="/images/vanilla-cake.png" alt="Vanilla Cake">
-            <img src="/images/red-velvet-cake.png" alt="Red Velvet Cake">
-            <img src="/images/carrot-cake.png" alt="Carrot Cake">
-            <img src="/images/strawberry-cake.png" alt="Strawberry Cake">
-            <img src="/images/cheese-cake.png" alt="Cheesecake">
+            <img src="images/chocolate-cake.png" alt="Chocolate Cake">
+            <img src="images/vanilla-cake.png" alt="Vanilla Cake">
+            <img src="images/red-velvet-cake.png" alt="Red Velvet Cake">
+            <img src="images/carrot-cake.png" alt="Carrot Cake">
+            <img src="images/strawberry-cake.png" alt="Strawberry Cake">
+            <img src="images/cheese-cake.png" alt="Cheesecake">
         </div>
     </section>
 
