--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h2>Contact Us</h2>
         <p>Fb: info@sweetdelights.com</p>
         <p>Phone: (123) 456-7890</p>
-        <p>Address: 123 Cake Lane, Sweet City, CA</p>
+        <p>Address: Antipolo City, Rizal</p>
     </section>
 
     <section id="calculator">
