--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <section id="contact">
         <h2>Contact Us</h2>
-        <p>Fb: info@sweetdelights.com</p>
+        <p>Fb: sweetdelights.com</p>
         <p>Phone: (123) 456-7890</p>
         <p>Address: Antipolo City, Rizal</p>
     </section>
